--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ topic_06/task1/__pycache__/
 topic_07/task4/__pycache__/
 lab_02/__pycache__/
 lab_02/.pytest_cache/
+lab_03/__pycache__/
+lab_03/.pytest_cache/
